--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <section class="container-servicos">
     <div class="subtitulo-paragrafo">
-      <h2>Muito além do Percurso</h2>
+      <h2>Aprofunde no Percurso</h2>
       <p>Ao criar um Percurso Digial para a sua empresa, você terá materiais de atração, alto engajamento e conversão, feitos, de forma personalizada de acordo com sua marca e o seu público. </p>
     </div>
     <div class="container-produtos">
