--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <header class="container-header">
     <div class="p-header">
       <h1>Quer atrair e pescar clientes?</h1>
-      <p>Mais de 150 milhões de brasileiros estão online no mar digital todos os dias! Eu te dou o percurso para atrair, pescar o público certo e o transformar em cliente. </p>
+      <p>Mais de 150 milhões de brasileiros estão online no mar digital todos os dias! E você pode atrair e pescar o público certo para transforma-lo em cliente. Quer saber como?</p>
         <h2>A Percursos Digitais te ajuda com:</h2>
         <ul class="list">
           <li>Estratégia de Marketing Digital</li>
