--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <section class="container-servicos">
     <div class="subtitulo-paragrafo">
       <h2>Aprofunde no Percurso</h2>
-      <p>Ao criar um Percurso Digial para a sua empresa, você terá materiais de atração, alto engajamento e conversão, feitos, de forma personalizada de acordo com sua marca e o seu público. </p>
+      <p>Ao criar um Percurso Digital para a sua empresa, você terá materiais de atração, alto engajamento e conversão, feitos, de forma personalizada de acordo com sua marca e o seu público. </p>
     </div>
     <div class="container-produtos">
       <div class="produto">
