--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
     <div class="container-produtos">
       <div class="produto">
         <h3>Cartões de Visita Digitais</h3>
-        <img src="./img/cartao.png" alt="cartao" width="325" height="302">
+        <img src="./img/cartao.png" alt="cartao" width="325" height="302" class="item">
         <p class="txt">Personalizados, interativos e fáceis de compartilhar: um cartão moderno que gera conexão imediata.</p>
         <a href="#" class="btn-secundario">Ver o portfólio completo</a>
       </div>
 
        <div class="produto">
         <h3>Landing Pages</h3>
-        <img src="./img/lps.png" alt="landing-pages" width="325" height="302">
+        <img src="./img/lps.png" alt="landing-pages" width="325" height="302" class="item">
         <p class="txt">Landing Pages ultrarrápidas, leves e responsivas de alta conversão. Perfeitas para divulgar um serviço, evento ou produto digital.</p>
         <a href="#" class="btn-secundario">Ver o portfólio completo</a>
       </div>
 
        <div class="produto">
         <h3>Conteúdos Estratégicos</h3>
-        <img src="./img/content.png" alt="conteudo" width="325" height="302">
+        <img src="./img/content.png" alt="conteudo" width="325" height="302" class="item">
         <p class="txt">Conteúdos estratégicos para Instagram e LinkedIn, pensados para todas as etapas do funil de vendas.</p>
         <a href="#" class="btn-secundario">Ver o case de sucesso</a>
       </div>
