--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
   <section class="container-servicos">
     <div class="subtitulo-paragrafo">
-      <h2>Aprofunde no Percurso</h2>
-      <p>Ao criar um Percurso Digital para a sua empresa, você terá materiais de atração, alto engajamento e conversão, feitos, de forma personalizada de acordo com sua marca e o seu público. </p>
+      <h2 class="fonte-preta-h2">Aprofunde no Percurso</h2>
+      <p class="fonte-preta-p">Ao criar um Percurso Digital para a sua empresa, você terá materiais de atração, alto engajamento e conversão, feitos, de forma personalizada de acordo com sua marca e o seu público. </p>
     </div>
     <div class="container-produtos">
       <div class="produto">
