--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
 </nav>
 
   <header class="container-header">
+    <div>
+      <img src="./img/img-pesca.png" alt="img-pesca" class="img-pesca">
+    </div>
     <div class="p-header">
       <h1>Quer atrair e pescar clientes?</h1>
       <p>Mais de 150 milhões de brasileiros estão online no mar digital todos os dias! Você pode atrair, pescar o público certo e transformá-lo em cliente. Quer saber como?</p>
@@ -50,9 +53,7 @@
         </ul>
      <a href="#" class="btn">Quero pescar mais clientes</a>
     </div>
-    <div>
-      <img src="./img/img-pesca.png" alt="img-pesca">
-    </div>
+ 
   </header>
 
   <section class="container-servicos">
@@ -62,22 +63,22 @@
     </div>
     <div class="container-produtos">
       <div class="produto">
+        <img src="./img/fish.png" alt="fish" width="60" height="60">
         <h3>Cartões de Visita Digitais</h3>
-        <img src="./img/cartao.png" alt="cartao" width="325" height="302" class="item">
         <p class="txt">Personalizados, interativos e fáceis de compartilhar: um cartão moderno que gera conexão imediata.</p>
         <a href="#" class="btn-secundario">Ver o portfólio completo</a>
       </div>
 
        <div class="produto">
+         <img src="./img/fish.png" alt="fish" width="60" height="60">
         <h3>Landing Pages</h3>
-        <img src="./img/lps.png" alt="landing-pages" width="325" height="302" class="item">
         <p class="txt">Landing Pages ultrarrápidas, leves e responsivas de alta conversão. Perfeitas para divulgar um serviço, evento ou produto digital.</p>
         <a href="#" class="btn-secundario">Ver o portfólio completo</a>
       </div>
 
        <div class="produto">
+         <img src="./img/fish.png" alt="fish" width="60" height="60">
         <h3>Conteúdos Estratégicos</h3>
-        <img src="./img/content.png" alt="conteudo" width="325" height="302" class="item">
         <p class="txt">Conteúdos estratégicos para Instagram e LinkedIn, pensados para todas as etapas do funil de vendas.</p>
         <a href="#" class="btn-secundario">Ver o case de sucesso</a>
       </div>
@@ -91,35 +92,28 @@
     </div>
 
     <div class="container-processos">
-      <div class="processos">
         <div>
           <div class="processo-lista">
             <h2><b class="bg-numb">1.</b> Conversa estratégica:</h2>
             <p>Entendo seus objetivos e os percursos digitais do seu negócio.</p>
+          </div>
+          <div class="processo-lista">
+            <h2><b class="bg-numb">2.</b>Pesquisa Inicial:</h2>
+            <p>Analiso público, concorrência e posicionamento.</p>
           </div>
            <div class="processo-lista">
             <h2><b class="bg-numb">3.</b> Desenvolvimento:</h2>
             <p>Criação visual e estratégica focada em conversão.</p>
            </div>
            <div class="processo-lista">
+            <h2><b class="bg-numb">4.</b>Apresentação e Refinamento:</h2>
+            <p>Ajustamos juntos cada detalhe.</p>
+            </div>
+           <div class="processo-lista">
             <h2><b class="bg-numb">5.</b>Codificação e Entrega:</h2>
             <p>Tudo pronto para uso, com performance e propósito.</p>
            </div>
           </div>
-      </div>
-
-      <div>
-        <div>
-          <div class="processo-lista">
-            <h2><b class="bg-numb">2.</b>Pesquisa Inicial:</h2>
-            <p>Analiso público, concorrência e posicionamento.</p>
-          </div>
-            <div class="processo-lista">
-            <h2><b class="bg-numb">4.</b>Apresentação e Refinamento:</h2>
-            <p>Ajustamos juntos cada detalhe.</p>
-            </div>
-          </div>
-      </div>
     </div>
   </section>
 
