--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 
+  <link rel="stylesheet" href="geral.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -16,7 +17,7 @@
   <img src="./img/marca.png" alt="marca" width="178" height="72">
 
   <ul class="menu" role="menubar">
-    <li role="none"><a role="menuitem" href="#home">Home</a></li>
+    <li role="none"><a role="menuitem" href="index.html">Home</a></li>
 
     <!-- dropdown -->
     <li class="dropdown" role="none">
@@ -33,7 +34,7 @@
       </ul>
     </li>
 
-    <li role="none"><a role="menuitem" href="#contato">Contato</a></li>
+    <li role="none"><a role="menuitem" href="contato.html">Contato</a></li>
   </ul>
 </nav>
 
