--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
       </button>
 
       <ul id="submenu-portfolio" class="submenu" role="menu" aria-hidden="true">
-        <li role="none"><a role="menuitem" href="#landing-pages">Landing Pages</a></li>
+        <li role="none"><a role="menuitem" href="lp.html">Landing Pages</a></li>
         <li role="none"><a role="menuitem" href="#cartoes">Cartões de Visita</a></li>
         <li role="none"><a role="menuitem" href="#conteudo">Conteúdos Estratégicos</a></li>
         <li role="none"><a role="menuitem" href="#case">Case de Sucesso</a></li>
@@ -80,7 +80,7 @@
                         <label for="procedure">Adiante o assunto:</label>
                         <input type="text" id="procedure" name="procedure" placeholder="Ex: Preciso do serviço tal, pelo motivo tal">
                     </div>
-                    <button type="submit" class="btn primary-btn">Quero o meu Percurso Digital</button>
+                    <button type="submit" class="btn primary-btn">Quero atrair e pescar mais clientes</button>
                 </form>
             </div>
         </div>
