--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </button>
 
       <ul id="submenu-portfolio" class="submenu" role="menu" aria-hidden="true">
-        <li role="none"><a role="menuitem" href="#landing-pages">Landing Pages</a></li>
+        <li role="none"><a role="menuitem" href="lp.html">Landing Pages</a></li>
         <li role="none"><a role="menuitem" href="#cartoes">Cartões de Visita</a></li>
         <li role="none"><a role="menuitem" href="#conteudo">Conteúdos Estratégicos</a></li>
         <li role="none"><a role="menuitem" href="#case">Case de Sucesso</a></li>
