--- a/lp.html
+++ b/lp.html
@@ -39,5 +39,6 @@
     <li role="none"><a role="menuitem" href="contato.html">Contato</a></li>
   </ul>
 </nav>
+ <script src="script.js"></script>
 </body>
 </html>
