--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   <section>
       <div class="subtitulo-paragrafo">
       <h2>Processo Percursos Digitais</h2>
-      <p>Cada projeto é uma jornada. O Processo Percursos Digitais garante que tudo seja feito com clareza, propósito e foco em resultado - do primeiro contato até a entrega.</p>
+      <p>Cada projeto é uma jornada. <br> O Processo Percursos Digitais garante que tudo seja feito com clareza, propósito e foco em resultado - do primeiro contato até a entrega.</p>
     </div>
 
     <div class="container-processos">
