--- a/contato.html
+++ b/contato.html
@@ -85,6 +85,15 @@
             </div>
         </div>
   </section>
+
+  <cite class="cite">
+    <h3>Construindo percursos que convertem.</h3>
+  </cite>
+
+  <footer class="footer">
+    <p>Desenvolvido por Percursos Digitais - 2025</p>
+  </footer>
+
    <script src="script.js"></script>
 </body>
 </html>
