--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li>Landing Pages de alta conversão</li>
           <li>Conteúdos para Instagram e LinkedIn</li>
         </ul>
-     <a href="#" class="btn">Quero pescar mais clientes</a>
+     <a href="contato.html" class="btn">Quero pescar mais clientes</a>
     </div>
  
   </header>
@@ -67,21 +67,21 @@
         <img src="./img/fish.png" alt="fish" width="60" height="60">
         <h3>Cartões de Visita Digitais</h3>
         <p class="txt">Personalizados, interativos e fáceis de compartilhar: um cartão moderno que gera conexão imediata.</p>
-        <a href="#" class="btn-secundario">Ver o portfólio completo</a>
+        <a href="cartoes.html" class="btn-secundario">Ver o portfólio completo</a>
       </div>
 
        <div class="produto">
          <img src="./img/fish.png" alt="fish" width="60" height="60">
         <h3>Landing Pages</h3>
         <p class="txt">Landing Pages ultrarrápidas, leves e responsivas de alta conversão. Perfeitas para divulgar um serviço, evento ou produto digital.</p>
-        <a href="#" class="btn-secundario">Ver o portfólio completo</a>
+        <a href="lp.html" class="btn-secundario">Ver o portfólio completo</a>
       </div>
 
        <div class="produto">
          <img src="./img/fish.png" alt="fish" width="60" height="60">
         <h3>Conteúdos Estratégicos</h3>
         <p class="txt">Conteúdos estratégicos para Instagram e LinkedIn, pensados para todas as etapas do funil de vendas.</p>
-        <a href="#" class="btn-secundario">Ver o case de sucesso</a>
+        <a href="conteudo.html" class="btn-secundario">Ver o case de sucesso</a>
       </div>
     </div>
   </section>
