--- a/lp.html
+++ b/lp.html
@@ -40,6 +40,46 @@
   </ul>
 </nav>
 
+<div class="container-descricao subtitulo-paragrafo">
+    <h2>Landing Page de marcação de consultas</h2>
+  <h3>Objetivo:</h3>
+  <p>Desenvolver uma landing page profissional e conversiva para um consultório odontológico. O foco principal é atrair pacientes via Google Ads, com alto desempenho em mobile e desktop.</p>
+
+<h3>Requisitos Técnicos:</h3>
+<ul class="list">
+  <li>Responsiva</li>
+  <li>Velocidade alta (PageSpeed 90+)</li>
+  <li>SEO configurado</li>
+  <li>Estrutura leve (HTML + CSS + JS limpo)</li>
+  <li>Foco em UX/UI para públicos mobile</li>
+  <li>Padrão visual de clínicas acessíveis e familiares</li>
+</ul>
+
+<div>
+  <a href="https://dental-clinic-nine-dun.vercel.app/" target="_blank" class="link">Ver online</a>
+</div>
+
+</div>
+
+
+<section class="galeria">
+
+  <div class="galeria-container">
+    <div class="galeria-item">
+      <img src="./img/dentista1.png" alt="Imagem 1">
+    </div>
+    <div class="galeria-item">
+      <img src="./img/dentista2.png" alt="Imagem 2">
+    </div>
+  </div>
+</section>
+
+<div>
+
+</div>
+
+
+
   <cite class="cite">
     <h3>Construindo percursos que convertem.</h3>
   </cite>
