--- a/cartoes.html
+++ b/cartoes.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="geral.css">
   <link rel="stylesheet" href="contato.css">
   <link rel="stylesheet" href="lp.css">
+  <link rel="stylesheet" href="cartoes.css">
 </head> 
 <body>
     <nav class="container-menu" aria-label="Navegação principal">
