--- a/lp.html
+++ b/lp.html
@@ -49,7 +49,7 @@
 <ul class="list">
   <li>Responsiva</li>
   <li>Velocidade alta (PageSpeed 90+)</li>
-  <li>SEO configurado</li>
+  <li>SEO e Copywriting de alta conversão</li>
   <li>Estrutura leve (HTML + CSS + JS limpo)</li>
   <li>Foco em UX/UI para públicos mobile</li>
   <li>Padrão visual de clínicas acessíveis e familiares</li>
