--- a/cartoes.html
+++ b/cartoes.html
@@ -41,6 +41,55 @@
   </ul>
 </nav>
 
+<section class="slider">
+  <!-- Container que desliza -->
+  <div class="slides-container">
+    <div class="slide">
+      <img src="./img/img-adv.png" alt="Cartão 1">
+      <div class="slide-info">
+        <p class="descricao">Design corporativo e moderno.</p>
+        <a href="https://cartao-drajoana.vercel.app/" target="_blank" class="link">Ver online</a>
+      </div>
+    </div>
+
+    <div class="slide">
+      <img src="./img/img-berzin.png" alt="Cartão 2">
+      <div class="slide-info">
+        <p class="descricao">Design industrial com leves animações.</p>
+        <a href="https://berzinradiadores.vercel.app/" target="_blank" class="link">Ver online</a>
+      </div>
+    </div>
+
+    <div class="slide">
+      <img src="./img/img-cirurgiao.png" alt="Cartão 3">
+      <div class="slide-info">
+        <p class="descricao">Design clássico, profissional e organic.</p>
+        <a href="https://cartao-dentista.vercel.app/" target="_blank" class="link">Ver online</a>
+      </div>
+    </div>
+
+    <div class="slide">
+      <img src="./img/img-lili.png" alt="Cartão 4">
+      <div class="slide-info">
+        <p class="descricao">Design navy-gold, luxo.</p>
+        <a href="https://liianberzin.vercel.app/" target="_blank" class="link">Ver online</a>
+      </div>
+    </div>
+
+    <div class="slide">
+      <img src="./img/img-percursos.png" alt="Cartão 5">
+      <div class="slide-info">
+        <p class="descricao">Design moderno e geométrico.</p>
+        <a href="https://cartao-percursos.vercel.app/" target="_blank" class="link">Ver online</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Botões de navegação fixos -->
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+</section>
+
   <cite class="cite">
     <h3>Construindo percursos que convertem.</h3>
   </cite>
