--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div class="produto">
         <img src="./img/fish.png" alt="fish" width="60" height="60">
         <h3>Cartões de Visita Digitais</h3>
-        <p class="txt">Personalizados, interativos e fáceis de compartilhar: um cartão moderno que gera conexão imediata.</p>
+        <p class="txt">Personalizados, interativos e fáceis de compartilhar: um cartão moderno, prático e econômico que gera conexão imediata.</p>
         <a href="cartoes.html" class="btn-secundario">Ver o portfólio completo</a>
       </div>
 
