--- a/lp.html
+++ b/lp.html
@@ -43,7 +43,7 @@
 <div class="container-descricao subtitulo-paragrafo">
     <h2>Landing Page de marcação de consultas</h2>
   <h3>Objetivo:</h3>
-  <p>Desenvolver uma landing page profissional e conversiva para um consultório odontológico. O foco principal é atrair pacientes via Google Ads, com alto desempenho em mobile e desktop.</p>
+  <p>Desenvolver uma landing page profissional e conversiva para um consultório odontológico. O foco principal é atrair pacientes com alto desempenho em mobile e desktop.</p>
 
 <h3>Requisitos Técnicos:</h3>
 <ul class="list">
@@ -77,8 +77,6 @@
 <div>
 
 </div>
-
-
 
   <cite class="cite">
     <h3>Construindo percursos que convertem.</h3>
