--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
        <div class="produto">
          <img src="./img/fish.png" alt="fish" width="60" height="60">
         <h3>Conteúdos Estratégicos</h3>
-        <p class="txt">Conteúdos estratégicos para Instagram e LinkedIn, pensados para todas as etapas do funil de marketing: atração, educação e vendas.</p>
+        <p class="txt">Conteúdos para Instagram e LinkedIn, pensados para todas as etapas do funil de marketing: atração, educação e vendas.</p>
         <a href="conteudo.html" class="btn-secundario">Ver o case de sucesso</a>
       </div>
     </div>
