--- a/contato.html
+++ b/contato.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="form-group">
                         <label for="procedure">Adiante o assunto:</label>
-                        <input type="text" id="procedure" name="procedure" placeholder="Ex: Preciso do serviço tal, pelo motivo tal">
+                        <input type="text" id="procedure" name="procedure" placeholder="Ex: Preciso do serviço tal, porque...">
                     </div>
                     <button type="submit" class="btn primary-btn">Quero atrair e pescar mais clientes</button>
                 </form>
