--- a/cartoes.html
+++ b/cartoes.html
@@ -45,7 +45,7 @@
   <!-- Container que desliza -->
   <div class="slides-container">
     <div class="slide">
-      <img src="./img/img-adv.png" alt="Cartão 1">
+      <img src="./img/img-adv.jpg" alt="Cartão 1">
       <div class="slide-info">
         <p class="descricao">Design corporativo e moderno.</p>
         <a href="https://cartao-drajoana.vercel.app/" target="_blank" class="link">Ver online</a>
@@ -53,7 +53,7 @@
     </div>
 
     <div class="slide">
-      <img src="./img/img-berzin.png" alt="Cartão 2">
+      <img src="./img/img-berzin.jpg" alt="Cartão 2">
       <div class="slide-info">
         <p class="descricao">Design industrial com leves animações.</p>
         <a href="https://berzinradiadores.vercel.app/" target="_blank" class="link">Ver online</a>
@@ -61,7 +61,7 @@
     </div>
 
     <div class="slide">
-      <img src="./img/img-cirurgiao.png" alt="Cartão 3">
+      <img src="./img/img-cirurgiao.jpg" alt="Cartão 3">
       <div class="slide-info">
         <p class="descricao">Design clássico, profissional e organic.</p>
         <a href="https://cartao-dentista.vercel.app/" target="_blank" class="link">Ver online</a>
@@ -69,7 +69,7 @@
     </div>
 
     <div class="slide">
-      <img src="./img/img-lili.png" alt="Cartão 4">
+      <img src="./img/img-lili.jpg" alt="Cartão 4">
       <div class="slide-info">
         <p class="descricao">Design navy-gold, luxo.</p>
         <a href="https://liianberzin.vercel.app/" target="_blank" class="link">Ver online</a>
@@ -77,7 +77,7 @@
     </div>
 
     <div class="slide">
-      <img src="./img/img-percursos.png" alt="Cartão 5">
+      <img src="./img/img-percursos.jpg" alt="Cartão 5">
       <div class="slide-info">
         <p class="descricao">Design moderno e geométrico.</p>
         <a href="https://cartao-percursos.vercel.app/" target="_blank" class="link">Ver online</a>
