--- a/case.html
+++ b/case.html
@@ -13,6 +13,8 @@
   <link rel="stylesheet" href="geral.css">
   <link rel="stylesheet" href="contato.css">
   <link rel="stylesheet" href="lp.css">
+  <link rel="stylesheet" href="cartoes.css">
+  <link rel="stylesheet" href="case.css">
 </head> 
 <body>
     <nav class="container-menu" aria-label="Navegação principal">
@@ -39,6 +41,67 @@
     <li role="none"><a role="menuitem" href="contato.html">Contato</a></li>
   </ul>
 </nav>
+
+<div class="descricao-case">
+  <h2>Case de Sucesso: Colinha Frontend</h2>
+  <h3>Instagram + Landing Page</h3>
+  <p>Em 2020, interessei-me por tecnologia e comecei a aprender e compartilhar sobre em um Instagram. A motivação foi colocar meus criativos escrita + design no ar por meio de código. Ao longo da jornada, descobri minha didática e habilidade em Social Media</p>
+
+  <p>Após 2 anos de estudo e compartilhamento orgânico, comecei a obter resultados significativos. Ao explicar JavaScript de forma fácil e pedir para o público salvar para não perder, em um post carrossel eu obtinha 4k de salvamentos e comentários profundos de como conseguiam aprender mais comigo do que com vídeos de 1h no YouTube.</p>
+
+  <p>A seguir, veja os resultados:</p>
+
+</div>
+
+<section class="slider">
+  <!-- Container que desliza -->
+  <div class="slides-container">
+    <div class="slide">
+      <img src="./img/resultado1.jpg" alt="Resutltado 1">
+    </div>
+
+    <div class="slide">
+      <img src="./img/resultado2.jpg" alt="Resultado 2">
+    </div>
+
+    <div class="slide">
+      <img src="./img/resultado3.jpg" alt="Resultado 3">
+    </div>
+
+    <div class="slide">
+      <img src="./img/resultado4.jpg" alt="Resultado 4">
+    </div>
+
+    <div class="slide">
+      <img src="./img/resultado5.jpg" alt="Resultado 5">
+    </div>
+  </div>
+
+  <!-- Botões de navegação fixos -->
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+</section>
+
+<div class="descricao-case">
+  <p>Como já existe um funil de marketing para conversão, e a conversão é o aprendizado, uma evolução natural da marca seria a venda de cursos, portanto, desenvolvi uma landing page fictícia de alta conversão, ultrarrápida, nota A no GTmetrix.</p>
+</div>
+
+<section class="galeria">
+
+  <div class="galeria-container">
+    <div class="galeria-item">
+      <img src="./img/lp-colinha1.jpg" alt="Imagem 1">
+    </div>
+    <div class="galeria-item">
+      <img src="./img/lp-colinha2.jpg" alt="Imagem 2">
+    </div>
+  </div>
+</section>
+
+<div class="container-links">
+  <a href="https://www.instagram.com/colinhafrontend/" target="_blank" class="btn">Ver Instagram</a>
+  <a href="https://lp-colinha-academy.vercel.app/" target="_blank" class="btn">Ver Landing Page</a>
+</div>
 
   <cite class="cite">
     <h3>Construindo percursos que convertem.</h3>
