--- a/case.html
+++ b/case.html
@@ -34,7 +34,7 @@
         <li role="none"><a role="menuitem" href="lp.html">Landing Pages</a></li>
         <li role="none"><a role="menuitem" href="cartoes.html">Cartões de Visita</a></li>
         <li role="none"><a role="menuitem" href="conteudo.html">Conteúdos Estratégicos</a></li>
-        <li role="none"><a role="menuitem" href="case.html">Case de Sucesso</a></li>
+        <li role="none"><a role="menuitem" href="case.html">Case e Resultados</a></li>
       </ul>
     </li>
 
