--- a/conteudo.html
+++ b/conteudo.html
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="geral.css">
   <link rel="stylesheet" href="contato.css">
   <link rel="stylesheet" href="lp.css">
+  <link rel="stylesheet" href="case.css">
+  <link rel="stylesheet" href="conteudo.css">
+
 </head> 
 <body>
     <nav class="container-menu" aria-label="Navegação principal">
@@ -32,13 +35,48 @@
         <li role="none"><a role="menuitem" href="lp.html">Landing Pages</a></li>
         <li role="none"><a role="menuitem" href="cartoes.html">Cartões de Visita</a></li>
         <li role="none"><a role="menuitem" href="conteudo.html">Conteúdos Estratégicos</a></li>
-        <li role="none"><a role="menuitem" href="case.html">Case de Sucesso</a></li>
+        <li role="none"><a role="menuitem" href="case.html">Case e Resultados</a></li>
       </ul>
     </li>
 
     <li role="none"><a role="menuitem" href="contato.html">Contato</a></li>
   </ul>
 </nav>
+
+<div>
+  <h2>Conteúdos Estratégicos para Instagram e LinkedIn</h2>
+
+  <p>A seguir, veja o post mais recente do <a href="case.html" class="link-interno">Instagram Colinha Frontend</a> com storytelling e analogias do universo POP, explicando de forma fácil um conceito de programação JavaScript(JS). </p>
+</div>
+
+<section class="slider">
+  <!-- Container que desliza -->
+  <div class="slides-container">
+    <div class="slide">
+      <img src="./img/" alt="Resutltado 1">
+    </div>
+
+    <div class="slide">
+      <img src="./img/" alt="Resultado 2">
+    </div>
+
+    <div class="slide">
+      <img src="./img/" alt="Resultado 3">
+    </div>
+
+    <div class="slide">
+      <img src="./img/" alt="Resultado 4">
+    </div>
+
+    <div class="slide">
+      <img src="./img/" alt="Resultado 5">
+    </div>
+  </div>
+
+  <!-- Botões de navegação fixos -->
+  <button class="prev">&#10094;</button>
+  <button class="next">&#10095;</button>
+</section>
 
   <cite class="cite">
     <h3>Construindo percursos que convertem.</h3>
