--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li role="none"><a role="menuitem" href="lp.html">Landing Pages</a></li>
         <li role="none"><a role="menuitem" href="#cartoes">Cartões de Visita</a></li>
         <li role="none"><a role="menuitem" href="#conteudo">Conteúdos Estratégicos</a></li>
-        <li role="none"><a role="menuitem" href="#case">Case de Sucesso</a></li>
+        <li role="none"><a role="menuitem" href="#case">Case e Resultados</a></li>
       </ul>
     </li>
 
