--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,7 @@
       <ul id="submenu-portfolio" class="submenu" role="menu" aria-hidden="true">
         <li role="none"><a role="menuitem" href="lp.html">Landing Pages</a></li>
         <li role="none"><a role="menuitem" href="#cartoes">Cartões de Visita</a></li>
-        <li role="none"><a role="menuitem" href="#conteudo">Conteúdos Estratégicos</a></li>
+        <li role="none"><a role="menuitem" href="#conteudo">Conteúdos</a></li>
         <li role="none"><a role="menuitem" href="#case">Case de Sucesso</a></li>
       </ul>
     </li>
