--- a/conteudo.html
+++ b/conteudo.html
@@ -44,7 +44,7 @@
 </nav>
 
 <div class="container-descricao subtitulo-paragrafo">
-  <h2>Facilitando tecnologia com didática</h2>
+  <h2>Post carrossel para meio de funil</h2>
   <h3>Objetivo: ensinar através de storytelling e analogias do universo POP</h3>
 
   <p>Há anos esta conta está inativa, o post foi criado e postado para demonstrar minhas atuais habilidades de criação de conteúdo. Apesar do resultado atual este Instagram é o meu <a href="case.html" class="link-interno">case de sucesso</a> como criadora de conteúdo e Social Media. Este post contém storytelling e analogias do universo POP, explicando de forma fácil um conceito de programação JavaScript(JS).</p>
@@ -55,7 +55,47 @@
 <script async src="//www.instagram.com/embed.js"></script>
 </div>
 
+<div class="container-descricao subtitulo-paragrafo">
+  <h2>Copywriting para topo de funil</h2>
+  <h3>Post estático: Trate sua marca como pessoa e gere conexão emocional</h3>
 
+  <p>Sua marca parece um robô? 😂</p>
+
+<p>Pessoas criam laços fortes com outras pessoas — e o mesmo vale para as marcas.</p> 
+
+<p>Quando uma marca é humanizada, ela ativa áreas do cérebro ligadas à recompensa, estimulando mais conexão e engajamento.</p>
+
+<p>Caráter e valores genuínos geram autenticidade e aumentam a confiança do público.</p>
+
+<p>E isso começa com a definição da Persona da sua marca, garantindo uma comunicação eficiente em todos os pontos de contato, dentro e fora do digital.</p>
+
+<p>💡 Como humanizar sua marca, na prática?</p>
+<ul class="list">
+  <li>Definindo a personalidade;</li>
+  <li>Estabelecendo um tom de voz;</li>
+  <li>Criando uma identidade visual;</li>
+  <li>Mantendo ações consistentes.</li>
+</ul>
+<p>Quer saber mais? Siga seu coração e o meu perfil. ❤️
+Vamos crescer juntos! 🚀</p>
+
+<p>#midiassociais #midiasocial #mídiassociais #redessociaisparanegocios #dicasdemarketing #dicasdemarketingdigital #marketingbrasil #socialmediabrasil #socialmediabr #criadordeconteudo #criadoradeconteudo #copywriter #copywriting #copycoracao</p>
+
+</div>
+
+<div class="container-descricao subtitulo-paragrafo">
+  <h3>Post estático: Será que um texto sozinho é capaz de gerar comunidade no Instagram?</h3>
+  <p>Um texto pode ser muito poderoso, sim! Mas ele ganha força de verdade quando faz parte de uma estratégia.</p>
+
+<p>👉 Pense assim: se você está acima do peso e toma um suco detox por um dia, até ajuda o seu organismo a desintoxicar, mas só isso não é suficiente para emagrecer.</p>
+
+<p>Agora, quando você segue uma dieta completa, feita sob medida, com os alimentos certos, nas quantidades certas e no momento certo, você conquista seu objetivo!</p>
+
+<p>📌 O mesmo vale para criar comunidade no Instagram:
+Um post como este, pode ser atrativo, rápido de consumir e gerar conhecimento, mas é a estratégia consistente que traz seguidores e mantém as pessoas perto de você.</p>
+
+<p>Quer saber mais? Siga seu coração e o meu perfil! Vamos crescer juntos! ❤️</p>
+</div>
 
   <cite class="cite">
     <h3>Construindo percursos que convertem.</h3>
