--- a/conteudo.html
+++ b/conteudo.html
@@ -44,7 +44,7 @@
 </nav>
 
 <div class="container-descricao subtitulo-paragrafo">
-  <h2>Post carrossel para meio de funil</h2>
+  <h2>Post carrossel para meio de funil: educação</h2>
   <h3>Objetivo: ensinar através de storytelling e analogias do universo POP</h3>
 
   <p>Há anos esta conta está inativa, o post foi criado e postado para demonstrar minhas atuais habilidades de criação de conteúdo. Apesar do resultado atual este Instagram é o meu <a href="case.html" class="link-interno">case de sucesso</a> como criadora de conteúdo e Social Media. Este post contém storytelling e analogias do universo POP, explicando de forma fácil um conceito de programação JavaScript(JS).</p>
@@ -56,7 +56,7 @@
 </div>
 
 <div class="container-descricao subtitulo-paragrafo">
-  <h2>Copywriting para topo de funil</h2>
+  <h2>Copywriting para topo de funil: atração</h2>
   <h3>Post estático: Trate sua marca como pessoa e gere conexão emocional</h3>
 
   <p>Sua marca parece um robô? 😂</p>
