--- a/conteudo.html
+++ b/conteudo.html
@@ -46,6 +46,7 @@
 <div class="container-descricao subtitulo-paragrafo">
   <h2>Post carrossel para meio de funil: educação</h2>
   <h3>Objetivo: ensinar através de storytelling e analogias do universo POP</h3>
+  <h4>Nicho: Tecnologia</h4>
 
   <p>Há anos esta conta está inativa, o post foi criado e postado para demonstrar minhas atuais habilidades de criação de conteúdo. Apesar do resultado atual este Instagram é o meu <a href="case.html" class="link-interno">case de sucesso</a> como criadora de conteúdo e Social Media. Este post contém storytelling e analogias do universo POP, explicando de forma fácil um conceito de programação JavaScript(JS).</p>
 </div>
@@ -58,6 +59,7 @@
 <div class="container-descricao subtitulo-paragrafo">
   <h2>Copywriting para topo de funil: atração</h2>
   <h3>Post estático: Trate sua marca como pessoa e gere conexão emocional</h3>
+  <h4>Nicho: Marketing Digital</h4>
 
   <p>Sua marca parece um robô? 😂</p>
 
@@ -95,6 +97,32 @@ Vamos crescer juntos! 🚀</p>
 Um post como este, pode ser atrativo, rápido de consumir e gerar conhecimento, mas é a estratégia consistente que traz seguidores e mantém as pessoas perto de você.</p>
 
 <p>Quer saber mais? Siga seu coração e o meu perfil! Vamos crescer juntos! ❤️</p>
+</div>
+
+<div class="container-descricao subtitulo-paragrafo">
+  <h2> Copywriting para fundo de funil: conversão</h2>
+  <h3>Post estático evergreen fixado no perfil</h3>
+  <h4>Nicho: Médico</h4>
+
+  <p>Aqui na nossa clínica, trabalhamos com acolhimento, escuta e leveza.
+</p>
+
+<p>❤️ Nosso objetivo é cuidar do seu coração com atenção a cada detalhe.</p>
+
+<p>🩺 Como funciona nossa consulta:</p>
+
+<ul>
+  <li>1. Você agenda o horário e traz seus exames anteriores (se tiver).
+</li>
+<li>2. Conversamos sobre seus sintomas, hábitos e histórico familiar.</li>
+<li>3. Realizamos exames básicos na hora, como medição da pressão.</li>
+<li>4. Você sai com um plano de cuidado claro: orientações, exames complementares (se necessário) e tratamento.</li>
+</ul>
+
+<p>✨ A consulta cardiológica não é só para quem sente dor. É para quem quer continuar sem sentir.</p>
+
+<p>Entre no link da bio e agende uma consulta, estamos esperando por você! 😉</p>
+
 </div>
 
   <cite class="cite">
