--- a/contato.html
+++ b/contato.html
@@ -30,9 +30,9 @@
 
       <ul id="submenu-portfolio" class="submenu" role="menu" aria-hidden="true">
         <li role="none"><a role="menuitem" href="lp.html">Landing Pages</a></li>
-        <li role="none"><a role="menuitem" href="#cartoes">Cartões de Visita</a></li>
-        <li role="none"><a role="menuitem" href="#conteudo">Conteúdos</a></li>
-        <li role="none"><a role="menuitem" href="#case">Case de Sucesso</a></li>
+        <li role="none"><a role="menuitem" href="cartoes.html">Cartões de Visita</a></li>
+        <li role="none"><a role="menuitem" href="conteudo.html">Conteúdos</a></li>
+        <li role="none"><a role="menuitem" href="case.html">Case de Sucesso</a></li>
       </ul>
     </li>
 
