--- a/case.html
+++ b/case.html
@@ -43,7 +43,7 @@
 </nav>
 
 <div class="descricao-case">
-  <h2>Case de Sucesso: Colinha Frontend</h2>
+  <h2>Case de Sucesso: <br> Colinha Frontend</h2>
   <h3>Instagram + Landing Page</h3>
   <p>Em 2020, interessei-me por tecnologia e comecei a aprender e compartilhar sobre em um Instagram. A motivação foi colocar meus criativos escrita + design no ar por meio de código. Ao longo da jornada, descobri minha didática e habilidade em Social Media</p>
 
