--- a/conteudo.html
+++ b/conteudo.html
@@ -111,7 +111,7 @@ Um post como este, pode ser atrativo, rápido de consumir e gerar conhecimento, 
 
 <p>🩺 Como funciona nossa consulta:</p>
 
-<ul>
+<ul class="lista">
   <li>1. Você agenda o horário e traz seus exames anteriores (se tiver).
 </li>
 <li>2. Conversamos sobre seus sintomas, hábitos e histórico familiar.</li>
