--- a/lp.html
+++ b/lp.html
@@ -41,7 +41,7 @@
 </nav>
 
 <div class="container-descricao subtitulo-paragrafo">
-    <h2>Landing Page de marcação de consultas</h2>
+    <h2>Landing Page de agendamento de consultas</h2>
   <h3>Objetivo:</h3>
   <p>Desenvolver uma landing page profissional e conversiva para um consultório odontológico. O foco principal é atrair pacientes com alto desempenho em mobile e desktop.</p>
 
