--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
     <div class="p-header">
       <h1>Quer atrair e pescar clientes?</h1>
       <p>Mais de 150 milhões de brasileiros estão online no mar digital todos os dias! Você pode atrair, pescar o público certo e transformá-lo em cliente. Quer saber como?</p>
-        <h2>A Percursos Digitais te ajuda com:</h2>
+        <h2>A Percursos Digitais cria a isca certa com:</h2>
         <ul class="list">
           <li>Estratégia de Marketing Digital</li>
           <li>Cartões de Visita Digitais</li>
           <li>Landing Pages de alta conversão</li>
           <li>Conteúdos para Instagram e LinkedIn</li>
         </ul>
-     <a href="contato.html" class="btn">Quero pescar mais clientes</a>
+     <a href="contato.html" class="btn">Quero atrair e pescar mais clientes</a>
     </div>
  
   </header>
